# upub

./: .gitignore  .tci  Cargo.toml  README.md  build.rs  main.rs
.github/workflows/: build.yml
apb/: Cargo.toml  README.md
apb/src/: README.md  base.rs  field.rs  jsonld.rs  key.rs  lib.rs  link.rs  macros.rs  node.rs  server.rs  shortcuts.rs  target.rs
apb/src/object/: actor.rs  document.rs  mod.rs  profile.rs  relationship.rs  tombstone.rs
apb/src/object/activity/: mod.rs
apb/src/object/collection/: mod.rs  page.rs
apb/src/types/: base.rs  link.rs  mod.rs
apb/src/types/object/: actor.rs  document.rs  mod.rs  place.rs  relationship.rs  tombstone.rs
apb/src/types/object/activity/: accept.rs  ignore.rs  intransitive.rs  mod.rs  offer.rs  reject.rs
apb/src/types/object/collection/: mod.rs  page.rs
cli/: Cargo.toml  README.md
cli/src/: cloak.rs  fix_activities.rs  lib.rs  register.rs  relay.rs  thread.rs
core/: Cargo.toml  README.md
core/src/: config.rs  context.rs  init.rs
mdhtml/: Cargo.toml
mdhtml/src/: lib.rs
migrations/: Cargo.toml  README.md
migrations/src/: m20240524_000001_create_actor_activity_object_tables.rs  m20240524_000002_create_relations_likes_shares.rs  m20240524_000003_create_users_auth_and_config.rs  m20240524_000004_create_addressing_deliveries.rs  m20240529_000001_add_relation_unique_index.rs  m20240605_000001_add_jobs_table.rs  m20240606_000001_add_audience_to_objects.rs  m20240607_000001_activity_ref_is_optional.rs  m20240609_000001_add_instance_field_to_relations.rs  m20240626_000001_add_notifications_table.rs  m20240628_000002_add_credentials_activated.rs  m20240703_000002_add_image_to_objects.rs  m20240706_000001_add_error_to_jobs.rs  m20240715_000001_add_quote_uri_to_objects.rs  m20240715_000002_add_actors_fields_and_aliases.rs  m20240811_000001_add_full_text_index.rs  m20241226_000001_add_show_likes_collection.rs  m20241226_000002_add_like_activities.rs  m20250115_000001_add_content_to_activities.rs
routes/: Cargo.toml  README.md  build.rs
routes/src/: auth.rs  builders.rs  error.rs  lib.rs  web.rs
routes/src/activitypub/: application.rs  auth.rs  file.rs  inbox.rs  mod.rs  well_known.rs
routes/src/activitypub/actor/: audience.rs  following.rs  inbox.rs  likes.rs  mod.rs  outbox.rs
routes/src/activitypub/object/: context.rs  likes.rs  replies.rs
routes/src/mastodon/: mod.rs
routes/src/web/: mod.rs
src/: auth.rs  config.rs  dispatcher.rs  errors.rs  fetcher.rs  main.rs  router.rs  server.rs  tools.rs
src/activitypub/: README.md  activity.rs  inbox.rs  jsonld.rs  mod.rs  object.rs  user.rs  well_known.rs
src/activitystream/: activity.rs  actor.rs  key.rs  link.rs  macros.rs  mod.rs  node.rs  object.rs  prelude.rs  types.rs
src/cli/: faker.rs  fetch.rs  fix.rs  mod.rs  register.rs  relay.rs  update.rs
src/migrations/: README.md  m20240316_000001_create_table.rs  m20240322_000001_create_relations.rs  m20240322_000002_add_likes_shares.rs  m20240322_000003_add_indexes.rs  m20240323_000001_add_user_configs.rs  m20240323_000002_add_simple_credentials.rs  m20240324_000001_add_addressing.rs  m20240325_000001_add_deliveries.rs  m20240325_000002_add_system_key.rs  m20240418_000001_add_statuses_and_reply_to.rs  m20240421_000001_add_attachments.rs  m20240421_000001_make_addressed_activity_nullable.rs  m20240424_000001_add_sensitive_field.rs  m20240429_000001_add_relays_table.rs  m20240502_000001_add_object_updated.rs  m20240512_000001_add_url_to_objects.rs  m20240520_000001_add_published_to_addressing_actor_index.rs  m20240524_000001_create_actor_activity_object_tables.rs  m20240524_000002_create_relations_likes_shares.rs  mod.rs  (+3 more)
src/model/: README.md  (+22 more)
upub/core/: Cargo.toml  README.md
upub/core/src/: config.rs  context.rs  downtime.rs  errors.rs  ext.rs  init.rs  lib.rs  selector.rs
upub/core/src/model/: activity.rs  actor.rs  addressing.rs  announce.rs  attachment.rs  config.rs  credential.rs  dislike.rs  downtime.rs  hashtag.rs  instance.rs  job.rs  like.rs  mention.rs  mod.rs  notification.rs  object.rs  relation.rs  session.rs
upub/core/src/selector/: batch.rs  mod.rs  query.rs  rich.rs
upub/core/src/server/: admin.rs  auth.rs  context.rs  dispatcher.rs  fetcher.rs  inbox.rs  init.rs  jsonld.rs  mod.rs
upub/core/src/traits/: address.rs  admin.rs  cloak.rs  fetch.rs  mod.rs  normalize.rs  process.rs
upub/processor/: Cargo.toml
upub/processor/src/: address.rs  fetch.rs  lib.rs  normalize.rs  outbox.rs  process.rs
upub/routes/: Cargo.toml  README.md
upub/routes/src/: auth.rs  builders.rs  error.rs  lib.rs
upub/routes/src/activitypub/: activity.rs  application.rs  auth.rs  context.rs  feed.rs  file.rs  groups.rs  inbox.rs  mod.rs  outbox.rs  tags.rs  well_known.rs
upub/routes/src/activitypub/actor/: audience.rs  feed.rs  following.rs  inbox.rs  likes.rs  mod.rs  notifications.rs  outbox.rs  streams.rs
upub/routes/src/activitypub/object/: context.rs  likes.rs  mod.rs  replies.rs  shares.rs
upub/routes/src/activitypub/user/: following.rs  inbox.rs  mod.rs  outbox.rs
upub/worker/: Cargo.toml
upub/worker/src/: delivery.rs  dispatcher.rs  inbound.rs  lib.rs  local.rs  outbound.rs
utils/httpsign/: Cargo.toml  lib.rs
utils/uriproxy/: Cargo.toml  README.md  lib.rs
utils/uriproxy/src/: lib.rs
web/: Cargo.toml  README.md  index.html  manifest.json  style.css
web/src/: app.rs  auth.rs  config.rs  context.rs  control.rs  getters.rs  groups.rs  lib.rs  main.rs  page.rs  prelude.rs  timeline.rs  view.rs
web/src/activities/: item.rs
web/src/actors/: activity.rs  follow.rs  header.rs  mod.rs  posts.rs  view.rs
web/src/components/: activity.rs  login.rs  mod.rs  navigation.rs  object.rs  post.rs  timeline.rs  user.rs
web/src/objects/: attachment.rs  context.rs  item.rs  mod.rs  replies.rs  view.rs
web/src/page/: about.rs  config.rs  debug.rs  mod.rs  object.rs  register.rs  search.rs  timeline.rs  user.rs
web/src/page/actor/: follow.rs  mod.rs  view.rs
web/src/timeline/: any.rs  feed.rs  mod.rs  thread.rs
worker/: Cargo.toml  README.md
worker/src/: delivery.rs  lib.rs
(+108 files in other folders)
