[workspace]
members = [
	"apb",
	"upub/core",
	"upub/cli",
	"upub/migrations",
	"upub/routes",
	"upub/worker",
	"web",
	"utils/httpsign",
	"utils/mdhtml",
	"utils/uriproxy"
]

[package]
name = "upub-bin"
version = "0.3.0"
edition = "2021"
authors = [ "alemi <me@alemi.dev>" ]
description = "Traits and types to handle ActivityPub objects"
license = "AGPL-3.0"
keywords = ["activitypub", "activitystreams", "json"]
repository = "https://git.alemi.dev/upub.git"
readme = "README.md"

[[bin]]
name = "upub"
path = "main.rs"

[dependencies]
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
sea-orm = "0.12"
clap = { version = "4.5", features = ["derive"] }
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
tokio = { version = "1.35", features = ["full"] } # TODO slim this down
futures = "0.3"

upub = { path = "upub/core" }
upub-cli = { path = "upub/cli", optional = true }
upub-migrations = { path = "upub/migrations", optional = true }
upub-routes = { path = "upub/routes", optional = true }
upub-worker = { path = "upub/worker", optional = true }

[features]
default = ["serve", "migrate", "cli", "worker"]
serve = ["dep:upub-routes"]
migrate = ["dep:upub-migrations"]
cli = ["dep:upub-cli"]
worker = ["dep:upub-worker"]
