[workspace]
members = [
	"apb",
	"core",
	"cli",
	"migrations",
	"routes",
	"worker",
	"web",
	"utils/httpsign",
	"utils/mdhtml",
	"utils/uriproxy",
]

[package]
name = "upub-bin"
version = "0.4.3"
edition = "2021"
authors = [ "alemi <me@alemi.dev>" ]
description = "Traits and types to handle ActivityPub objects"
license = "AGPL-3.0"
keywords = ["activitypub", "activitystreams", "json"]
repository = "https://git.alemi.dev/upub.git"
readme = "README.md"

[[bin]]
name = "upub"
path = "main.rs"

[dependencies]
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
tokio = { version = "1.43", features = ["rt-multi-thread", "macros"] }
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls"] }
futures = "0.3"

upub = { path = "core" }
upub-cli = { path = "cli", optional = true }
upub-migrations = { path = "migrations", optional = true }
upub-routes = { path = "routes", optional = true }
upub-worker = { path = "worker", optional = true }

[features]
default = ["serve", "migrate", "cli", "worker"]
serve = ["dep:upub-routes"]
migrate = ["dep:upub-migrations"]
cli = ["dep:upub-cli"]
worker = ["dep:upub-worker"]
