[package]
name = "apb"
version = "0.2.0"
edition = "2021"
authors = [ "alemi <me@alemi.dev>" ]
description = "Traits and types to handle ActivityPub objects"
license = "MIT"
keywords = ["activitypub", "activitystreams", "json"]
repository = "https://git.alemi.dev/upub.git"
readme = "README.md"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
paste = "1.0"
tracing = "0.1"
async-trait = "0.1"
serde_json = { version = "1", optional = true }
sea-orm = { version = "0.12", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }

[features]
default = ["activitypub-miscellaneous-terms", "send"]
# extensions
activitypub-miscellaneous-terms = [] # https://swicg.github.io/miscellany/
activitypub-counters = [] # https://ns.alemi.dev/as/counters/#
activitypub-fe = [] # https://ns.alemi.dev/as/fe/#
ostatus = [] # https://ostatus.org#  , but it redirects and 403??? just need this for conversation
toot = [] # http://joinmastodon.org/ns#  , mastodon is weird tho??
litepub = [] # incomplete, https://litepub.social/
# full jsonld utilities
jsonld = []
# builtin utils
send = []
orm = ["dep:sea-orm"]
fetch = ["dep:reqwest"]
# providers
unstructured = ["dep:serde_json"]
#TODO eventually also make a structured base?
