[package]
name = "upub-web"
version = "0.4.2"
edition = "2021"
authors = [ "alemi <me@alemi.dev>" ]
description = "web frontend for upub"
license = "AGPL-3.0"
keywords = ["activitypub", "upub", "json", "web", "wasm"]
repository = "https://git.alemi.dev/upub.git"
#readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.5"
cookie = "0.18"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-subscriber-wasm = "0.1"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_default = "0.2"
serde-inline-default = "0.2"
dashmap = "6.1"
leptos = { version = "0.7", features = ["csr", "tracing"] }
leptos_router = { version = "0.7", features = ["tracing"] }
leptos-use = "0.15"
codee = { version = "0.2", features = ["json_serde"] } # WHYYY LEPTOS-USE AKSJFOASHGOAEG
reqwest = { version = "0.12", features = ["json"] }
apb = { path = "../apb", features = ["unstructured", "activitypub-fe", "activitypub-counters", "litepub", "did-core"] }
uriproxy = { path = "../utils/uriproxy/" }
mdhtml = { path = "../utils/mdhtml/" }
futures = "0.3.30"
chrono = { version = "0.4", features = ["serde"] }
jrd = "0.1"
tld = "2.36"
web-sys = { version = "0.3", features = ["Screen"] }
regex = "1.11"
