[package]
name = "upub-worker"
version = "0.3.0"
edition = "2021"
authors = [ "alemi <me@alemi.dev>" ]
description = "upub background activity processing and dispatching workers"
license = "AGPL-3.0"
repository = "https://git.alemi.dev/upub.git"
readme = "README.md"

[lib]

[dependencies]
thiserror = "2.0"
tracing = "0.1"
serde_json = "1.0"
sea-orm = "1.1"
regex = "1.11"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.43", features = ["time"] }
reqwest = { version = "0.12", features = ["json"] }
apb = { path = "../apb", features = ["unstructured", "orm", "activitypub-fe", "activitypub-counters", "litepub", "ostatus", "toot"] }
mdhtml = { path = "../utils/mdhtml/" }
upub = { path = "../core/" }
