[package]
name = "httpsign"
version = "0.1.0"
edition = "2021"
authors = [ "alemi <me@alemi.dev>" ]
description = "fediverse-friendly implementation of http signaures in rust"
license = "MIT"
#keywords = ["html", "markdown", "parser"]
repository = "https://git.alemi.dev/upub.git"
readme = "README.md"

[lib]
path = "lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
tracing = "0.1"
base64 = "0.22"
openssl = "0.10" # TODO handle pubkeys with a smaller crate
axum = { version = "0.7", optional = true }

[features]
default = []
axum = ["dep:axum"]
