[package]
name = "uriproxy"
version = "0.1.1"
edition = "2021"
authors = [ "alemi <me@alemi.dev>" ]
description = "internal upub crate to handle remote uris"
license = "MIT"
keywords = ["upub", "uri", "base64"]
repository = "https://moonlit.technology/alemi/upub"

[lib]
path = "lib.rs"

[dependencies]
base64 = "0.22"
